// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea[Base] should render correctly  1`] = `
<div
  class="c-i7z34y cj7pbfe"
  data-soui-type="input"
>
  <textarea
    class="c-kulds8 c-km3xn9 cl630en"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about autosize 1`] = `
<div
  class="c-i7z34y"
  data-soui-type="input"
>
  <textarea
    class="c-kulds8 c-km3xn9 cl630en"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
    style="overflow: auto; max-height: 150px; height: 0px;"
  />
  <textarea
    class="c-kulds8 c-km3xn9 cl630en c-9ib3t7"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about footer 1`] = `
<div
  class="c-i7z34y"
  data-soui-type="input"
>
  <textarea
    class="c-kulds8 c-km3xn9 cl630en"
    placeholder="input something"
    rows="3"
  />
  <div
    class="c-kulds8 c-fjsdcg"
  >
    <div
      style="text-align: right;"
    >
      <span>
        0
      </span>
       / 20
    </div>
  </div>
</div>
`;

exports[`Textarea[Base] should render correctly about info 1`] = `
<div
  class="c-i7z34y"
  data-soui-type="input"
>
  <textarea
    class="c-kulds8 c-km3xn9 cl630en"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about info by function 1`] = `
<div
  class="c-i7z34y"
  data-soui-type="input"
>
  <textarea
    class="c-kulds8 c-km3xn9 cl630en"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-i7z34y cjetbgp"
    data-soui-type="input"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-kulds8 c-km3xn9 cl630en"
      placeholder="small size"
      rows="3"
    />
  </div>
  <div
    class="c-i7z34y"
    data-soui-type="input"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-kulds8 c-km3xn9 cl630en"
      placeholder="default size"
      rows="3"
    />
  </div>
  <div
    class="c-i7z34y cjarfy5"
    data-soui-type="input"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-kulds8 c-km3xn9 cl630en"
      placeholder="large size"
      rows="3"
    />
  </div>
</div>
`;
